# sftpserver

./: .bzrignore  .clang-format  .gitignore  .travis.yml  CHANGES.md  Doxyfile  Makefile.am  README  README.md  acinclude.m4  alloc.c  alloc.h  autogen.sh  charset.c  charset.h  configure.ac  daemon.c  debug.c  debug.h  dirname.c  format-gconv-report  futimens.c  futimes.c  fuzz  fuzz-build  fuzz-collect  fuzzing-cleanup.c  gesftpserver-debug.in  gesftpserver.8.in  getcwd.c  getopt.c  getopt1.c  globals.c  globals.h  handle.c  handle.h  paramiko-test  parse.c  parse.h  prepare  (+42 more)
gnu-include/: getopt.h
rotests/: rotest3456  rotest56  rotest6
scripts/: coverity  dist  test-replacements
tests/: badpacket3456  badpacket456  badpath45  badpath6  cd3456  chmod3  chmod3.expect  chmod45  chmod45.expect  chmod6  chmod6.expect  df3456  filetype3456  isdir345  isdir6  link3  link345  link45  link6  link6.expect  local3456  ls3  ls4  ls45  ls5  ls6  mkdir3  mkdir3456  mkdir456  nosuchpath3  nosuchpath456  open3456  open56  posix-rename3456  readlink3  readlink3.expect  readlink45  readlink45.expect  readlink6  readlink6.expect  (+45 more)
